<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dindinn.app.presentation.order.OrderViewModel" />

        <variable
            name="item"
            type="com.dindinn.app.domain.model.OrderDataDetails" />

        <variable
            name="adapter"
            type="com.dindinn.app.presentation.base.adapter.SingleLayoutAdapter" />

        <variable
            name="addonSize"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_id_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/text_order_id_sign"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="#" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@{item.id.toString()}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toEndOf="@+id/txt_order_item_id_sign"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="576" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_auto_reject_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/text_order_auto_reject_second"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="S" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_auto_reject_second_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/txt_order_item_auto_reject_second"
            app:layout_constraintEnd_toStartOf="@id/txt_order_item_auto_reject_second"
            app:layout_constraintTop_toTopOf="@+id/txt_order_item_auto_reject_second"
            tools:text="47" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_auto_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/text_order_auto_reject"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_snormal"
            app:layout_constraintBottom_toBottomOf="@+id/txt_order_item_auto_reject_second_value"
            app:layout_constraintEnd_toStartOf="@id/txt_order_item_auto_reject_second_value"
            app:layout_constraintTop_toTopOf="@+id/txt_order_item_auto_reject_second_value"
            tools:text="Auto reject" />

        <ProgressBar
            android:id="@+id/progress_order"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="@+id/txt_order_item_auto_reject_second"
            app:layout_constraintStart_toStartOf="@+id/txt_order_item_auto_reject"
            app:layout_constraintTop_toBottomOf="@+id/txt_order_item_auto_reject_second" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/text_order_at"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_snormal"
            app:layout_constraintStart_toStartOf="@+id/txt_order_item_id_sign"
            app:layout_constraintTop_toBottomOf="@+id/txt_order_item_id"
            tools:text="at" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_created_at_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@{item.makeTimeShortForm}"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_snormal"
            app:layout_constraintBottom_toBottomOf="@+id/txt_order_item_created_at"
            app:layout_constraintStart_toEndOf="@+id/txt_order_item_created_at"
            app:layout_constraintTop_toTopOf="@+id/txt_order_item_created_at"
            tools:text="01:30PM" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_order_item_accept"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/shape_background_button_blue_small"
            android:text="@string/text_order_accept"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_snormal"
            app:layout_constraintEnd_toEndOf="@+id/progress_order"
            app:layout_constraintStart_toStartOf="@+id/progress_order"
            app:layout_constraintTop_toBottomOf="@+id/progress_order"
            tools:text="@string/text_order_accept" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_order_item_add_on"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:adapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/view_order_item_separator"
            app:layout_constraintTop_toBottomOf="@id/btn_order_item_accept"
            tools:itemCount="2"
            tools:listitem="@layout/list_item_order_add_on" />

        <View
            android:id="@+id/view_order_item_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/txt_order_item_count_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_order_item_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@{addonSize}"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="1 item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>